--- a/starter-code/Stylesheet/index.css
+++ b/starter-code/Stylesheet/index.css
@@ -63,7 +63,53 @@ input[type=email] {
     .feature-text p {
         margin-top: 20px;
     }
+
+    .services-img{
+        position: relative;
+        left: 700px;
+    }
+
+    .text-two{
+        position: relative;
+        right: 600px;
+    }
+
+    .ready{
+        position: relative;
+        left: -197px;
+    }
+
+    .ready-input {
+        position: relative;
+        left: -130px;
+    }
+
+    .ready-button{
+        position: relative;
+        left: 32px;
+    }
    
    }
 
+
+.text-two {
+    color:#36536B;
+}
+
+.text-two h3 { 
+    font-size: 50px;
+}
+
+
+.footer-btn {
+    position: relative;
+    left: 168px;
+    top: -38px;
+}
+
+.feature2 {
+    background-image: url(../assets/home/desktop/bg-pattern-circle.svg);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+}
 
