--- a/starter-code/Stylesheet/index.css
+++ b/starter-code/Stylesheet/index.css
@@ -1,20 +1,20 @@
 body {
     background-color:#EDF3F8;
-    background-image: url('../assets/home/desktop/bg-pattern-circle.svg');
-    background-position: top right;
-    background-repeat: no-repeat;
+    /* background-image: url('../assets/home/desktop/bg-pattern-circle.svg'); */
+    /* background-position: top right;
+    background-repeat: no-repeat; */
 }
 
-.container h1 {
+/* .container h1 {
     font-size: 72px;
-}
+} */
 
 /* form design */
-.banner-btn {
+/* .banner-btn {
     position: relative;
     top: -62px;
     left: 279px;
-}
+} */
 
 input[type=email] {
     border-radius: 40px;;
@@ -39,7 +39,7 @@ input[type=email] {
     background-image: url('../assets/shared/desktop/bg-pattern-circle.svg');
     background-position: top left;
     background-repeat: no-repeat;
-    height: 472px;
+    height: 520px;
 }
 
 .buffer {
@@ -113,3 +113,29 @@ input[type=email] {
     background-repeat: no-repeat;
 }
 
+.buffer2{
+    height: 150px;
+}
+
+.banner {
+    background-size: cover;
+    background-position: center;
+    padding: 150px 0;
+    height: 700px;
+  }
+  
+  .banner h1 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 32px;
+    font-weight: bold;
+  }
+  
+  .banner p {
+    font-size: 20px;
+    color: white;
+    opacity: .7;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  }
+  
