--- a/starter-code/Stylesheet/index.css
+++ b/starter-code/Stylesheet/index.css
@@ -88,6 +88,10 @@ input[type=email] {
         position: relative;
         left: 32px;
     }
+
+    .banner-btn {
+        width: 50%;
+    }
    
    }
 
